--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@wdns/vue-code-block": "^2.3.5",
     "quasar": "^2.16.0",
     "unplugin-vue-markdown": "^28.3.0",
+    "vite": "^6.2.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
