--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 .thumbs.db
 node_modules
+.yarn
 
 # Quasar core related directories
 .quasar
@@ -21,6 +22,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 
 # Editor directories and files
 .idea
