--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
+    "@mdit/plugin-alert": "^0.16.0",
     "@quasar/extras": "^1.16.4",
     "@wdns/vue-code-block": "^2.3.5",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
+    "link": "^2.1.1",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-async": "^2.0.0",
+    "markdown-it-emoji": "^3.0.0",
     "quasar": "^2.16.0",
-    "unplugin-vue-markdown": "^28.3.0",
+    "unplugin-vue-markdown": "^28.3.1",
     "vite": "^6.2.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
