--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,10 @@
-[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue}]
+root = true
+
+[*]
 charset = utf-8
-indent_size = 4
 indent_style = space
+indent_size = 4
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 100
