--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 .DS_Store
 .thumbs.db
 node_modules
-.yarn
 
 # Quasar core related directories
 .quasar
-/dist
+# /dist
 /quasar.config.*.temporary.compiled*
+
+# allow build for preview on github pages
+dist/*
+# !dist/spa
+# try if our build process is also working with the ignore here..
 
 # Cordova related directories and files
 /src-cordova/node_modules
@@ -22,7 +26,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+.yarn
 
 # Editor directories and files
 .idea
