--- a/package.json
+++ b/package.json
@@ -1,52 +1,63 @@
 {
-  "name": "quasar-md-components",
-  "version": "0.0.1",
-  "description": "just test out unplugin-vue-markdown",
-  "productName": "Quasar Markdown Components Test",
-  "author": "s-light <git@s-light.eu>",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
-    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build",
-    "postinstall": "quasar prepare"
-  },
-  "dependencies": {
-    "@mdit/plugin-alert": "^0.16.0",
-    "@quasar/extras": "^1.16.4",
-    "@wdns/vue-code-block": "^2.3.5",
-    "gray-matter": "^4.0.3",
-    "highlight.js": "^11.11.1",
-    "link": "^2.1.1",
-    "markdown-it-anchor": "^9.2.0",
-    "markdown-it-async": "^2.0.0",
-    "markdown-it-emoji": "^3.0.0",
-    "quasar": "^2.16.0",
-    "unplugin-vue-markdown": "^28.3.1",
-    "vite": "^6.2.0",
-    "vue": "^3.4.18",
-    "vue-router": "^4.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@quasar/app-vite": "^2.1.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.14",
-    "prettier": "^3.3.3",
-    "vite-plugin-checker": "^0.8.0",
-    "vite-plugin-node-polyfills": "^0.23.0"
-  },
-  "engines": {
-    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
-  },
-  "packageManager": "yarn@3.4.1+sha512.a333bf9c2557d71f5ba87dd1446cde24bb9c35301ec29dd2baba577b3f9d1ab61348b66a1324de9088c40a996c5b9203794da8bf14cab9fae6a6eccc00cb8078"
+    "name": "quasar-md-components",
+    "version": "0.0.1",
+    "description": "just test out unplugin-vue-markdown",
+    "productName": "Quasar Markdown Components Test",
+    "projectUrl": "https://github.com/Make-Your-School/mks-welcome/",
+    "previewUrl": "https://make-your-school.github.io/mks-welcome/",
+    "author": "s-light <git@s-light.eu>",
+    "type": "module",
+    "private": true,
+    "scripts": {
+        "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
+        "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+        "test": "echo \"No test specified\" && exit 0",
+        "dev": "quasar dev",
+        "build": "quasar build",
+        "#postinstall": "quasar prepare"
+    },
+    "dependencies_currentlyUnused": {
+        "vue-markdown-render": "^2.2.1",
+        "@mdit/plugin-include": "^0.13.1"
+    },
+    "dependencies": {
+        "@mdit/plugin-alert": "^0.16.0",
+        "@quasar/extras": "^1.16.4",
+        "@types/markdown-it": "*",
+        "@wdns/vue-code-block": "^2.3.3",
+        "gray-matter": "^4.0.3",
+        "highlight.js": "^11.10.0",
+        "markdown-it": "^14.1.0",
+        "markdown-it-abbr": "^2.0.0",
+        "markdown-it-anchor": "^9.2.0",
+        "markdown-it-container": "^4.0.0",
+        "markdown-it-emoji": "^3.0.0",
+        "markdown-it-toc-done-right": "^4.2.0",
+        "pinia": "^2.2.4",
+        "quasar": "^2.16.0",
+        "unplugin-vue-markdown": "^28.3.1",
+        "vue": "^3.4.18",
+        "vue-i18n": "^10.0.0",
+        "vue-router": "^4.0.12"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.20.0",
+        "@quasar/app-vite": "^2.0.0",
+        "@vue/eslint-config-prettier": "^10.2.0",
+        "autoprefixer": "^10.4.2",
+        "eslint": "9",
+        "eslint-plugin-vue": "^9.32.0",
+        "globals": "^15.15.0",
+        "postcss": "^8.4.14",
+        "prettier": "3",
+        "vite": "^6.2.0",
+        "vite-plugin-checker": "^0.8.0",
+        "vite-plugin-node-polyfills": "^0.23.0"
+    },
+    "engines": {
+        "node": "^22",
+        "npm": ">= 6.13.4",
+        "yarn": ">= 1.21.1"
+    },
+    "packageManager": "yarn@3.4.1+sha512.a333bf9c2557d71f5ba87dd1446cde24bb9c35301ec29dd2baba577b3f9d1ab61348b66a1324de9088c40a996c5b9203794da8bf14cab9fae6a6eccc00cb8078"
 }
