add debug-output in action

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
         "test": "echo \"No test specified\" && exit 0",
         "dev": "quasar dev",
-        "build": "quasar build",
+        "build": "echo $PWD && ls -lah && quasar build",
         "#postinstall": "quasar prepare"
     },
     "dependencies_currentlyUnused": {
