--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,7 @@ jobs:
             #   run: yarn
 
             - name: Build 🔧
-              run: quasar build
-            #   run: yarn build
+              run: yarn build
 
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
